auth0 with permission

--- a/QimiaAcademy/appsettings.json
+++ b/QimiaAcademy/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "Auth0": {
+    "Domain": "https://dev-8f81v4xejicyhy5e.us.auth0.com",
+    "ClientId": "CpkSE1UXfgBWv6bDJ2PyvX5N8E4vE0KJ",
+    "ClientSecret": "NhoNjYJz9Y1WwzJx4pLh_ceTNpvuXYOn0AtgAA6JLvzQ42SiQxfTXHFy-8Din4Zq",
+    "Audience": "https://QimiaAcademy.com/api"
+  },
+
   "ConnectionStrings": {
     "DefaultConnection": "Server=DOGASEL\\SQL2023;Database=QimiaAcademy;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true;",
     "Redis": "localhost:6379,ssl=false"
